--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-🎉 ¡PERFECTA! AHORA SÍ
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -12,8 +11,8 @@
   <meta property="og:title" content="El Continental Gaming House">
   <meta property="og:description" content="Gaming House internacional de élite. Veni · Vidi · Vici.">
   <meta property="og:locale" content="es_AR">
-  <meta property="og:image" content="https://i.postimg.cc/YqLWP1gm/logo-de-web-PNG.png">
-  <meta property="og:image:secure_url" content="https://i.postimg.cc/YqLWP1gm/logo-de-web-PNG.png">
+  <meta property="og:image" content="https://i.imgur.com/ULKa2mV.png">
+  <meta property="og:image:secure_url" content="https://i.imgur.com/ULKa2mV.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -23,7 +22,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="El Continental Gaming House">
   <meta name="twitter:description" content="Gaming House internacional de élite. Veni · Vidi · Vici.">
-  <meta name="twitter:image" content="https://i.postimg.cc/YqLWP1gm/logo-de-web-PNG.png">
+  <meta name="twitter:image" content="https://i.imgur.com/ULKa2mV.png">
   
   <title>El Continental Gaming House</title>
   <meta name="description" content="Gaming House internacional de élite. Veni · Vidi · Vici.">
@@ -205,7 +204,7 @@
   
   <div class="container">
     <div class="logo-container">
-      <img src="https://i.postimg.cc/YqLWP1gm/logo-de-web-PNG.png" alt="El Continental Gaming House" class="logo">
+      <img src="https://i.imgur.com/ULKa2mV.png" alt="El Continental Gaming House" class="logo">
     </div>
     
     <h1>EL CONTINENTAL</h1>
